SWS-1043 - Introduce Concourse