@@ -69,7 +69,7 @@
 			</comments>
 		</license>
 	</licenses>
-	
+
 	<modules>
 		<module>spring-ws-core</module>
 		<module>spring-ws-security</module>
@@ -172,6 +172,16 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.6.1</version>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
+				<configuration>
+					<useSystemClassLoader>false</useSystemClassLoader>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
@@ -302,41 +312,6 @@
 								<goals>
 									<goal>sign</goal>
 								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>snapshot</id>
-
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.jfrog.buildinfo</groupId>
-						<artifactId>artifactory-maven-plugin</artifactId>
-						<version>2.6.1</version>
-						<inherited>false</inherited>
-						<executions>
-							<execution>
-								<id>build-info</id>
-								<goals>
-									<goal>publish</goal>
-								</goals>
-								<configuration>
-									<deployProperties>
-										<archives>*:*:*:*@zip zip.name:spring-ws, zip.displayname:Spring Web Services, zip.deployed:false</archives>
-									</deployProperties>
-									<publisher>
-										<contextUrl>http://repo.spring.io</contextUrl>
-										<username>{{USERNAME}}</username>
-										<password>{{PASSWORD}}</password>
-										<repoKey>libs-snapshot-local</repoKey>
-										<snapshotRepoKey>libs-snapshot-local</snapshotRepoKey>
-									</publisher>
-								</configuration>
 							</execution>
 						</executions>
 					</plugin>
@@ -588,6 +563,22 @@
 		<profile>
 			<id>java11</id>
 
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.22.1</version>
+						<configuration>
+							<useSystemClassLoader>false</useSystemClassLoader>
+							<argLine>
+								--illegal-access=permit
+							</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+
 			<dependencies>
 				<dependency>
 					<groupId>com.sun.xml.ws</groupId>
@@ -691,5 +682,5 @@
 		<connection>scm:git:git://github.com/spring-projects/spring-ws.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:spring-projects/spring-ws.git</developerConnection>
 	</scm>
-	
+
 </project>
